	  configured, such as mail which holds the vdomains in LDAP
	+ Added method EBox::Global::lastModificationTime to know when
          eBox configuration was modified for last time
	+ Add support for breadcrumbs on the UI
	+ Bug fix: in Loggerd files are only parsed one time regardless of
	  how many LogHelper reference them
1.3.11
	+ Support customFilter in models for big tables
	+ Added EBox::Events::sendEvent method to send events using Perl
	  code (used by ebackup module)
	+ Bug fix: EBox::Type::Service::cmp now works when only the
	  protocols are different
	+ Check $self is defined in PgDBEngine::DESTROY
	+ Do not watch files in ebox-loggerd related to disabled modules and
	  other improvements in the daemon
	+ Silent some exceptions that are used for flow control
	+ Improve the message from Service Event Watcher
1.3.10
	+ Show warning when accesing the UI with unsupported browsers
	+ Add disableApparmorProfile to EBox::Module::Service
	+ Bug fix: add missing use
	+ Bug fix: Make EventDaemon more robust against malformed sent
	  events by only accepting EBox::Event objects
1.3.8
	+ Bug fix: fixed order in EBox::Global::modified modules. Now
	  Global and Backup use the same method to order the module list
	  by dependencies
1.3.7
	+ Bug fix: generate public.css and login.css in dynamic-www directory
	  which is /var/lib/ebox/dynamicwww/css/ and not in /usr/share/ebox/www/css
	  as these files are generate every time eBox's apache is
	  restarted
	+ Bug fix: modules are restored now in the correct dependency
	  order
	+ ebox-make-backup accepts --destinaton flag to set backup's file name
	+ Add support for permanent messages to EBox::View::Customizer
1.3.6
	+ Bug fix: override _ids in EBox::Events::Watcher::Log to not return ids
	which do not exist
	+ Bug fix: fixed InverseMatchSelect type which is used by Firewall module
	+ New widget for the dashboard showing useful support information
	+ Bugfix: wrong permissions on CSS files caused problem with usercorner